--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "ethers": "^5.7.2",
     "ityped": "^1.0.3",
     "next": "12.2.4",
     "react": "18.2.0",
