--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@web3uikit/icons": "^1.1.2",
     "aos": "^2.3.4",
     "ethers": "^5.7.2",
     "ityped": "^1.0.3",
+    "lucide-react": "^0.282.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "wagmi": "^1.4.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
